Redesign of interaction with the database, redesign of api: added schemes
