# customer_analysis_service/api/v1/routers/analysis_interests.py
@@ -1,39 +1,34 @@
 from fastapi import APIRouter, Depends
+from sqlmodel import Session
 
-from customer_analysis_service.api.v1.dependencies.database import get_db
-from customer_analysis_service.db import Database
+from customer_analysis_service.api.deps import get_db
+from customer_analysis_service.api.v1.schemas.analysis import CustomersForAllCategoriesBaseAnalysis
 from customer_analysis_service.services.analysis.interests import InterestAnalysisService
 
 router = APIRouter()
 
 
-@router.get('/comments')
-def customer_interest_comments(product_name_id: str, database: Database = Depends(get_db)):
+@router.get('/comments', response_model=list[CustomersForAllCategoriesBaseAnalysis])
+def customer_interest_comments(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить группировк по всем категориям (интересам по комментариям) по клиентам нашего продукта
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: InterestAnalysisService = InterestAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_group_customers_interest_for_all_categories_by_comments(product_name_id)
-    }
+    service: InterestAnalysisService = InterestAnalysisService(db)
+    return service.get_group_customers_interest_for_all_categories_by_comments(product_name_id)
 
 
-@router.get('/reviews')
-def customer_interests_reviews(product_name_id: str, database: Database = Depends(get_db)):
+@router.get('/reviews', response_model=list[CustomersForAllCategoriesBaseAnalysis])
+def customer_interests_reviews(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить группировк по всем категориям (интересам по отзывам) по клиентам нашего продукта
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: InterestAnalysisService = InterestAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_group_customers_interest_for_all_categories_by_reviews(product_name_id)
-    }
+    service: InterestAnalysisService = InterestAnalysisService(db)
+    return service.get_group_customers_interest_for_all_categories_by_reviews(product_name_id)
