# customer_analysis_service/api/v1/routers/analysis_sentiments.py
@@ -1,14 +1,16 @@
 from fastapi import APIRouter, Depends
+from sqlmodel import Session
 
-from customer_analysis_service.api.v1.dependencies.database import get_db
-from customer_analysis_service.db import Database
+from customer_analysis_service.api.deps import get_db
+from customer_analysis_service.api.v1.schemas.analysis import GroupRegionallyAllCustomerAnalysis, \
+    CustomersForAllCategoriesAnalysis
 from customer_analysis_service.services.analysis.sentiments import SentimentAnalysisService
 
 router = APIRouter()
 
 
-@router.get("/comments/region")
-def customer_sentiment_comments_region(product_name_id: str, database: Database = Depends(get_db)):
+@router.get("/comments/region", response_model=list[GroupRegionallyAllCustomerAnalysis])
+def customer_sentiment_comments_region(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить сентимент анализ сгруппированный по ругионам для всех комментариев клиентов выбранного продукта
 
@@ -16,18 +18,15 @@ def customer_sentiment_comments_region(product_name_id: str, database: Database 
      (цветом показывать значения позитивности негативности от -1 до 1)
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: SentimentAnalysisService = SentimentAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_sentiment_analysis_group_regionally_all_customer_comments_product(product_name_id)
-    }
+    service: SentimentAnalysisService = SentimentAnalysisService(db)
+    return service.get_sentiment_analysis_group_regionally_all_customer_comments_product(product_name_id)
 
 
-@router.get("/reviews/region")
-def customer_sentiment_reviews_region(product_name_id: str, database: Database = Depends(get_db)):
+@router.get("/reviews/region", response_model=list[GroupRegionallyAllCustomerAnalysis])
+def customer_sentiment_reviews_region(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить сентимент анализ сгруппированный по ругионам для всех отзывов клиентов выбранного продукта
 
@@ -35,47 +34,38 @@ def customer_sentiment_reviews_region(product_name_id: str, database: Database =
      (цветом показывать значения позитивности негативности от -1 до 1)
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: SentimentAnalysisService = SentimentAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_sentiment_analysis_group_regionally_all_customer_reviews_product(product_name_id)
-    }
+    service: SentimentAnalysisService = SentimentAnalysisService(db)
+    return service.get_sentiment_analysis_group_regionally_all_customer_reviews_product(product_name_id)
 
 
-@router.get("/comments/category")
-def customer_sentiment_comments_category(product_name_id: str, database: Database = Depends(get_db)):
+@router.get("/comments/category", response_model=list[CustomersForAllCategoriesAnalysis])
+def customer_sentiment_comments_category(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить сенитмент анализ комментариев клиентов указанного продукта сгруппированный по категориям
 
     визуализация: https://plotly.com/python/treemaps/ или https://plotly.com/python/sunburst-charts/
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: SentimentAnalysisService = SentimentAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_sentiment_analysis_customer_comments_product_grouped_by_category(product_name_id)
-    }
+    service: SentimentAnalysisService = SentimentAnalysisService(db)
+    return service.get_sentiment_analysis_customer_comments_product_grouped_by_category(product_name_id)
 
 
-@router.get("/reviews/category")
-def customer_sentiment_reviews_category(product_name_id: str, database: Database = Depends(get_db)):
+@router.get("/reviews/category", response_model=list[CustomersForAllCategoriesAnalysis])
+def customer_sentiment_reviews_category(product_name_id: str, db: Session = Depends(get_db)):
     """
     Получить сенитмент анализ отзывов клиентов указанного продукта сгруппированный по категориям
 
     визуализация: https://plotly.com/python/treemaps/ или https://plotly.com/python/sunburst-charts/
 
     :param product_name_id:
-    :param database:
+    :param db:
     :return:
     """
-    service: SentimentAnalysisService = SentimentAnalysisService(database)
-    return {
-        'version': 'v1',
-        'data': service.get_sentiment_analysis_customer_reviews_product_grouped_by_category(product_name_id)
-    }
+    service: SentimentAnalysisService = SentimentAnalysisService(db)
+    return service.get_sentiment_analysis_customer_reviews_product_grouped_by_category(product_name_id)
