# docs/swagger.yaml
@@ -1,5 +1,127 @@
 components:
   schemas:
+    CustomersForAllCategoriesAnalysis:
+      properties:
+        analysis_value_avg:
+          title: Analysis Value Avg
+          type: number
+        customers_count:
+          minimum: 0.0
+          title: Customers Count
+          type: integer
+        href_category_1:
+          title: Href Category 1
+          type: string
+        href_category_2:
+          title: Href Category 2
+          type: string
+        href_category_3:
+          title: Href Category 3
+          type: string
+        href_category_4:
+          title: Href Category 4
+          type: string
+        product_fullname:
+          title: Product Fullname
+          type: string
+        ru_category_1:
+          title: Ru Category 1
+          type: string
+        ru_category_2:
+          title: Ru Category 2
+          type: string
+        ru_category_3:
+          title: Ru Category 3
+          type: string
+        ru_category_4:
+          title: Ru Category 4
+          type: string
+      required:
+      - ru_category_1
+      - href_category_1
+      - ru_category_2
+      - href_category_2
+      - product_fullname
+      - customers_count
+      - analysis_value_avg
+      title: CustomersForAllCategoriesAnalysis
+      type: object
+    CustomersForAllCategoriesBaseAnalysis:
+      properties:
+        customers_count:
+          minimum: 0.0
+          title: Customers Count
+          type: integer
+        href_category_1:
+          title: Href Category 1
+          type: string
+        href_category_2:
+          title: Href Category 2
+          type: string
+        href_category_3:
+          title: Href Category 3
+          type: string
+        href_category_4:
+          title: Href Category 4
+          type: string
+        product_fullname:
+          title: Product Fullname
+          type: string
+        ru_category_1:
+          title: Ru Category 1
+          type: string
+        ru_category_2:
+          title: Ru Category 2
+          type: string
+        ru_category_3:
+          title: Ru Category 3
+          type: string
+        ru_category_4:
+          title: Ru Category 4
+          type: string
+      required:
+      - ru_category_1
+      - href_category_1
+      - ru_category_2
+      - href_category_2
+      - product_fullname
+      - customers_count
+      title: CustomersForAllCategoriesBaseAnalysis
+      type: object
+    GroupRegionallyAllCustomerAnalysis:
+      properties:
+        analysis_value_avg:
+          title: Analysis Value Avg
+          type: number
+        city_en:
+          title: City En
+          type: string
+        city_ru:
+          title: City Ru
+          type: string
+        country_en:
+          title: Country En
+          type: string
+        country_ru:
+          title: Country Ru
+          type: string
+        latitude:
+          title: Latitude
+          type: number
+        longitude:
+          title: Longitude
+          type: number
+        object_count:
+          minimum: 0.0
+          title: Object Count
+          type: integer
+      required:
+      - latitude
+      - longitude
+      - object_count
+      - analysis_value_avg
+      title: GroupRegionallyAllCustomerAnalysis
+      type: object
     HTTPValidationError:
       properties:
         detail:
@@ -31,11 +153,11 @@ components:
       title: ValidationError
       type: object
 info:
-  title: CAS API
+  title: Customer Analysis Service API
   version: 1.0.0
 openapi: 3.0.2
 paths:
-  /analysis_interests/comments:
+  /api/v1/analysis_interests/comments:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0433\u0440\u0443\
         \u043F\u043F\u0438\u0440\u043E\u0432\u043A \u043F\u043E \u0432\u0441\u0435\
@@ -44,8 +166,8 @@ paths:
         \u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u044F\u043C) \u043F\u043E\
         \ \u043A\u043B\u0438\u0435\u043D\u0442\u0430\u043C \u043D\u0430\u0448\u0435\
         \u0433\u043E \u043F\u0440\u043E\u0434\u0443\u043A\u0442\u0430\n\n:param product_name_id:\n\
-        :param database:\n:return:"
-      operationId: customer_interest_comments_analysis_interests_comments_get
+        :param db:\n:return:"
+      operationId: customer_interest_comments_api_v1_analysis_interests_comments_get
       parameters:
       - in: query
         name: product_name_id
@@ -57,7 +179,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/CustomersForAllCategoriesBaseAnalysis'
+                title: Response Customer Interest Comments Api V1 Analysis Interests
+                  Comments Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -68,7 +195,7 @@ paths:
       summary: Customer Interest Comments
       tags:
       - analysis_interests
-  /analysis_interests/reviews:
+  /api/v1/analysis_interests/reviews:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0433\u0440\u0443\
         \u043F\u043F\u0438\u0440\u043E\u0432\u043A \u043F\u043E \u0432\u0441\u0435\
@@ -76,9 +203,8 @@ paths:
         \u043D\u0442\u0435\u0440\u0435\u0441\u0430\u043C \u043F\u043E \u043E\u0442\
         \u0437\u044B\u0432\u0430\u043C) \u043F\u043E \u043A\u043B\u0438\u0435\u043D\
         \u0442\u0430\u043C \u043D\u0430\u0448\u0435\u0433\u043E \u043F\u0440\u043E\
-        \u0434\u0443\u043A\u0442\u0430\n\n:param product_name_id:\n:param database:\n\
-        :return:"
-      operationId: customer_interests_reviews_analysis_interests_reviews_get
+        \u0434\u0443\u043A\u0442\u0430\n\n:param product_name_id:\n:param db:\n:return:"
+      operationId: customer_interests_reviews_api_v1_analysis_interests_reviews_get
       parameters:
       - in: query
         name: product_name_id
@@ -90,7 +216,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/CustomersForAllCategoriesBaseAnalysis'
+                title: Response Customer Interests Reviews Api V1 Analysis Interests
+                  Reviews Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -101,7 +232,7 @@ paths:
       summary: Customer Interests Reviews
       tags:
       - analysis_interests
-  /analysis_sentiments/comments/category:
+  /api/v1/analysis_sentiments/comments/category:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0438\u0442\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -113,8 +244,8 @@ paths:
         \u0438\u044F\u043C\n\n\u0432\u0438\u0437\u0443\u0430\u043B\u0438\u0437\u0430\
         \u0446\u0438\u044F: https://plotly.com/python/treemaps/ \u0438\u043B\u0438\
         \ https://plotly.com/python/sunburst-charts/\n\n:param product_name_id:\n\
-        :param database:\n:return:"
-      operationId: customer_sentiment_comments_category_analysis_sentiments_comments_category_get
+        :param db:\n:return:"
+      operationId: customer_sentiment_comments_category_api_v1_analysis_sentiments_comments_category_get
       parameters:
       - in: query
         name: product_name_id
@@ -126,7 +257,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/CustomersForAllCategoriesAnalysis'
+                title: Response Customer Sentiment Comments Category Api V1 Analysis
+                  Sentiments Comments Category Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -137,7 +273,7 @@ paths:
       summary: Customer Sentiment Comments Category
       tags:
       - analysis_sentiments
-  /analysis_sentiments/comments/region:
+  /api/v1/analysis_sentiments/comments/region:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -153,9 +289,9 @@ paths:
         \u0432\u0430\u0442\u044C \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F\
         \ \u043F\u043E\u0437\u0438\u0442\u0438\u0432\u043D\u043E\u0441\u0442\u0438\
         \ \u043D\u0435\u0433\u0430\u0442\u0438\u0432\u043D\u043E\u0441\u0442\u0438\
-        \ \u043E\u0442 -1 \u0434\u043E 1)\n\n:param product_name_id:\n:param database:\n\
+        \ \u043E\u0442 -1 \u0434\u043E 1)\n\n:param product_name_id:\n:param db:\n\
         :return:"
-      operationId: customer_sentiment_comments_region_analysis_sentiments_comments_region_get
+      operationId: customer_sentiment_comments_region_api_v1_analysis_sentiments_comments_region_get
       parameters:
       - in: query
         name: product_name_id
@@ -167,7 +303,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/GroupRegionallyAllCustomerAnalysis'
+                title: Response Customer Sentiment Comments Region Api V1 Analysis
+                  Sentiments Comments Region Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -178,7 +319,7 @@ paths:
       summary: Customer Sentiment Comments Region
       tags:
       - analysis_sentiments
-  /analysis_sentiments/reviews/category:
+  /api/v1/analysis_sentiments/reviews/category:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0438\u0442\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -189,8 +330,8 @@ paths:
         \ \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F\u043C\n\n\u0432\u0438\
         \u0437\u0443\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F: https://plotly.com/python/treemaps/\
         \ \u0438\u043B\u0438 https://plotly.com/python/sunburst-charts/\n\n:param\
-        \ product_name_id:\n:param database:\n:return:"
-      operationId: customer_sentiment_reviews_category_analysis_sentiments_reviews_category_get
+        \ product_name_id:\n:param db:\n:return:"
+      operationId: customer_sentiment_reviews_category_api_v1_analysis_sentiments_reviews_category_get
       parameters:
       - in: query
         name: product_name_id
@@ -202,7 +343,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/CustomersForAllCategoriesAnalysis'
+                title: Response Customer Sentiment Reviews Category Api V1 Analysis
+                  Sentiments Reviews Category Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -213,7 +359,7 @@ paths:
       summary: Customer Sentiment Reviews Category
       tags:
       - analysis_sentiments
-  /analysis_sentiments/reviews/region:
+  /api/v1/analysis_sentiments/reviews/region:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0441\u0435\u043D\
         \u0442\u0438\u043C\u0435\u043D\u0442 \u0430\u043D\u0430\u043B\u0438\u0437\
@@ -228,9 +374,9 @@ paths:
         \u0432\u0430\u0442\u044C \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F\
         \ \u043F\u043E\u0437\u0438\u0442\u0438\u0432\u043D\u043E\u0441\u0442\u0438\
         \ \u043D\u0435\u0433\u0430\u0442\u0438\u0432\u043D\u043E\u0441\u0442\u0438\
-        \ \u043E\u0442 -1 \u0434\u043E 1)\n\n:param product_name_id:\n:param database:\n\
+        \ \u043E\u0442 -1 \u0434\u043E 1)\n\n:param product_name_id:\n:param db:\n\
         :return:"
-      operationId: customer_sentiment_reviews_region_analysis_sentiments_reviews_region_get
+      operationId: customer_sentiment_reviews_region_api_v1_analysis_sentiments_reviews_region_get
       parameters:
       - in: query
         name: product_name_id
@@ -242,7 +388,12 @@ paths:
         '200':
           content:
             application/json:
-              schema: {}
+              schema:
+                items:
+                  $ref: '#/components/schemas/GroupRegionallyAllCustomerAnalysis'
+                title: Response Customer Sentiment Reviews Region Api V1 Analysis
+                  Sentiments Reviews Region Get
+                type: array
           description: Successful Response
         '422':
           content:
@@ -253,7 +404,7 @@ paths:
       summary: Customer Sentiment Reviews Region
       tags:
       - analysis_sentiments
-  /analysis_similarity/comments:
+  /api/v1/analysis_similarity/comments:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0437\u043D\u0430\
         \u0447\u0435\u043D\u0438\u044F \u0441\u0445\u043E\u0434\u0441\u0442\u0432\u0430\
@@ -272,8 +423,8 @@ paths:
         \ \u0433\u0438\u0441\u0442\u043E\u0433\u0440\u0430\u043C\u043C\u044B - \u0433\
         \u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0430 \u043F\u043E\
         \ \u0433\u043E\u0440\u043E\u0434\u0430\u043C (city_ru \u0438\u043B\u0438 \u0441\
-        ity_en)\n\n:param product_name_id:\n:param database:\n:return:"
-      operationId: get_customer_similarity_analysis_product_by_comments_analysis_similarity_comments_get
+        ity_en)\n\n:param product_name_id:\n:param db:\n:return:"
+      operationId: get_customer_similarity_analysis_product_by_comments_api_v1_analysis_similarity_comments_get
       parameters:
       - in: query
         name: product_name_id
@@ -296,7 +447,7 @@ paths:
       summary: Get Customer Similarity Analysis Product By Comments
       tags:
       - analysis_similarity
-  /analysis_similarity/reviews:
+  /api/v1/analysis_similarity/reviews:
     get:
       description: "\u041F\u043E\u043B\u0443\u0447\u0438\u0442\u044C \u0437\u043D\u0430\
         \u0447\u0435\u043D\u0438\u044F \u0441\u0445\u043E\u0434\u0441\u0442\u0432\u0430\
@@ -314,8 +465,8 @@ paths:
         \ \u0433\u0438\u0441\u0442\u043E\u0433\u0440\u0430\u043C\u043C\u044B - \u0433\
         \u0440\u0443\u043F\u043F\u0438\u0440\u043E\u0432\u043A\u0430 \u043F\u043E\
         \ \u0433\u043E\u0440\u043E\u0434\u0430\u043C (city_ru \u0438\u043B\u0438 \u0441\
-        ity_en)\n\n:param product_name_id:\n:param database:\n:return:"
-      operationId: get_customer_similarity_analysis_product_by_reviews_analysis_similarity_reviews_get
+        ity_en)\n\n:param product_name_id:\n:param db:\n:return:"
+      operationId: get_customer_similarity_analysis_product_by_reviews_api_v1_analysis_similarity_reviews_get
       parameters:
       - in: query
         name: product_name_id
